@@ -1,3 +1,8 @@
+2002-09-11  Mark Salter  <msalter@redhat.com>
+
+	* include/hal_if.h: Add __COMMCTL_ENABLE_LINE_FLUSH and
+	__COMMCTL_DISABLE_LINE_FLUSH.
+
 2002-08-29  Mark Salter  <msalter@redhat.com>
 
 	* include/generic-stub.h: Add defines for Z packet types.
